# webassembly-starter-kit-rust

./: .gitignore  Dockerfile  README.md
examples/hello-wasi/: README.md  hello-wasi.rs
examples/hello-wasm/: README.md  hello-wasm.rs  index.html
examples/hello-wasm-bindgen/: Cargo.toml  README.md  index.html
examples/hello-wasm-bindgen/src/: lib.rs
examples/node-wasm/: Cargo.toml  README.md  index.mjs
examples/node-wasm/src/: lib.rs
examples/with-fetch/: Cargo.toml  README.md  example.json  index.html
examples/with-fetch/src/: lib.rs
examples/with-simd/: Cargo.toml  README.md
examples/with-simd/src/: main.rs
examples/with-thread/: .npmrc  Cargo.toml  README.md  index.js  package.json  serve.json  wasm-worker.js
examples/with-thread/src/: lib.rs
src/wasm/hello-world/: README.md  hello-world.rs
