[package]
edition = "2021"
name = "with_fetch"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.51"
serde = {version = "1.0.80", features = ["derive"]}
serde_derive = "^1.0.59"
wasm-bindgen = {version = "0.2.78", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.24"
reqwest = { version = "0.11", features = ["json"] }
