[package]
description = "with-thread"
edition = "2018"
license = "MIT"
name = "with-thread"
repository = "https://github.com/ragingwind/wask-rust/examples/with-thread"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.24"
rayon = { version = "1.5", optional = true }
wasm-bindgen-rayon = { version = "1.0", optional = true }

[features]
parallel = ["rayon", "wasm-bindgen-rayon"]